samples/_failures_safe/1761597207_73e047_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b3aacc95.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_b3aacc95.c:179:5: error: expected declaration or statement at end of input
  179 |     if (!graph) return;
      |     ^~
